--- a/internal/web/templates/login.html
+++ b/internal/web/templates/login.html
@@ -11,6 +11,7 @@
             <input type="email" id="email" name="email" required><br><br>
             <label for="password">Password:</label><br>
             <input type="password" id="password" name="password" required><br><br>
+            <input type="checkbox" id="admin" name="admin"> Login as Admin<br><br>
             <input type="submit" value="Login">
             <button><a href="/auth/google/in" id="signIn">Sign In with Google</a></button>
             <button><a href="/auth/github/in" id="signIn">Sign In with Github</a></button>
