--- a/internal/web/templates/registration.html
+++ b/internal/web/templates/registration.html
@@ -22,6 +22,10 @@
             <label for="password">Password:</label><br>
             <input type="password" id="password" name="password" required><br><br>
 
+            <!-- Add Admin checkbox -->
+            <input type="checkbox" id="admin" name="admin"> Register as Admin<br><br><br><br>
+
+
             <p>{{.}}</p>
             
             <input type="submit" value="Register">
