--- a/internal/web/templates/login.html
+++ b/internal/web/templates/login.html
@@ -15,6 +15,7 @@
             <input type="submit" value="Login">
             <button><a href="/auth/google/in" id="signIn">Sign In with Google</a></button>
             <button><a href="/auth/github/in" id="signIn">Sign In with Github</a></button>
+            <button onclick="location.href='/'">Back Main</button><br>
         </form>
     </div>
 </body>
