--- a/internal/web/templates/registration.html
+++ b/internal/web/templates/registration.html
@@ -31,6 +31,7 @@
             <input type="submit" value="Register">
             <button><a href="/auth/google/in" id="signIn">Sign Up with Google</a></button>
             <button><a href="/auth/github/in" id="signIn">Sign In with Github</a></button>
+            <button onclick="location.href='/'">Back Main</button><br>
 
             <!-- <button><a href="/auth/google/register" id="signUp">Sign Up with Google</a></button>
             <button><a href="/auth/github/register" id="signUp">Sign Up with Github</a></button> -->
